fix broken layout on sort select box

--- a/frontend/src/assets/Results.module.scss
+++ b/frontend/src/assets/Results.module.scss
@@ -21,7 +21,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 1rem;
-      width: 10%;
+      min-width: 10%;
 
       select {
         padding: 0.3rem;
